typescript/checker/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration10.ts.stderr
error: TS1009
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration10.ts:1:6
  |
1 | var a,;
  |      ^

